# Logicbox_Touch

./: README.md
LvglMicropythonWindows/: RESISTE.py  duino.ino  example.py  output.txt  practica.py  run.bat  run_combined.bat  rundebug copy.bat  rundebug.bat  ui.py  ui2.py  ui_combined.py
LvglMicropythonWindows/Verb/: combined_sketch.ino  final.ino  run_combined.bat  shell_output.txt  ui_combined.py  ui_translated_sketch.ino
LvglMicropythonWindows/Verb/cyd_platformio_project/ejemplobutton/: platformio.ini
LvglMicropythonWindows/Verb/cyd_platformio_project/ejemplobutton/lib/UI/: ui.c
LvglMicropythonWindows/Verb/cyd_platformio_project/ejemplobutton/lib/lvgl/: .pioignore
LvglMicropythonWindows/Verb/cyd_platformio_project/ejemplobutton/src/: main.cpp
LvglMicropythonWindows/Verb/cyd_platformio_project/src/: main.cpp  ui.cpp  ui.h
LvglMicropythonWindows/Verb/lvgl_rust_ui/: Cargo.toml
